--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'R'
 - !lcsh 'Medicine'
+- GITenberg
 title: Juizo Verdadeiro sobre a carta contra os Medicos, Cirurgioens e Boticarios
 url: http://www.gutenberg.org/ebooks/34625
